force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesPath__c/BusinessRulesPath__c.object-meta.xml
<CustomObject>
    <label>BusinessRulesPath</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BusinessRulesPaths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>