force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesPath__c/fields/BusinessRulesSetting__c.field-meta.xml
<CustomField>
    <fullName>BusinessRulesSetting__c</fullName>
    <label>BusinessRulesSetting</label>
    <referenceTo>BusinessRulesSetting__c</referenceTo>
    <relationshipName>BusinessRulesPaths</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>