force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesPath__c/fields/BusinessRulesValidation__c.field-meta.xml
<CustomField>
    <fullName>BusinessRulesValidation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>BusinessRulesValidation</label>
    <referenceTo>BusinessRulesValidation__c</referenceTo>
    <relationshipName>BusinessRulesPaths</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>