force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesPath__c/fields/isActivated__c.field-meta.xml
<CustomField>
    <fullName>isActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>