force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesPath__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>