force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesPath__c/fields/StatusWhenRuleNotMet__c.field-meta.xml
<CustomField>
    <fullName>StatusWhenRuleNotMet__c</fullName>
    <description>Status que será atualizado a cotação relacionada quando a regra não for atendida, caso não queira que seja feito atualização de status, deixar campo sem nenhum valor.</description>
    <inlineHelpText>Status que será atualizado a cotação relacionada quando a regra não for atendida, caso não queira que seja feito atualização de status, deixar campo sem nenhum valor.</inlineHelpText>
    <label>Status quando regra não for atendida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>